add header_catalog and script hover

--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -58,7 +58,7 @@
                     </div>
                     <i class="dropdown icon"></i>
                 </div>
-                <div class="phone_help_popup" >
+                <div class="phone_help_popup">
                     <div class="social_link">
                         <a href="#" target="_blank" class="social_link_item">
                             <div class="social_img">
@@ -133,59 +133,60 @@
                 </div>
                 <div class="city_button_footer">
                     <div class="city_button_footer_text">Мы в других городах</div>
+                    <div class="city_button_footer_popup visually-hidden">
+                        <ul class="city_list">
+                            <li>
+                                <a href="#">Харьков</a>
+                                <div class="link_city">
+                                    <a href="#">Изюм</a>
+                                    <a href="#">Дергачи</a>
+                                    <a href="#">Валки</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">Киев</a>
+                            </li>
+                            <li>
+                                <a href="#">Днепр</a>
+                            </li>
+                            <li>
+                                <a href="#">Запорожье</a>
+                            </li>
+                            <li>
+                                <a href="#">Одесса</a>
+                            </li>
+                            <li>
+                                <a href="#">Львов</a>
+                            </li>
+                            <li>
+                                <a href="#">Черновцы</a>
+                            </li>
+                            <li>
+                                <a href="#">Суммы</a>
+                            </li>
+                            <li>
+                                <a href="#">Черкассы</a>
+                            </li>
+                            <li>
+                                <a href="#">Кривой рог</a>
+                                <div class="link_city">
+                                    <a href="#">Павлоград</a>
+                                    <a href="#">Энергодар</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">Николаев</a>
+                            </li>
+                            <li>
+                                <a href="#">Мариуполь</a>
+                            </li>
+                            <li>
+                                <a href="#">Полтава</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="ui custom popup  city_button_footer_popup">
-                     <ul class="city_list">
-                         <li>
-                             <a href="#">Харьков</a>
-                             <div class="link_city">
-                                 <a href="#">Изюм</a>
-                                 <a href="#">Дергачи</a>
-                                 <a href="#">Валки</a>
-                             </div>
-                         </li>
-                         <li>
-                             <a href="#">Киев</a>
-                         </li>
-                         <li>
-                             <a href="#">Днепр</a>
-                         </li>
-                         <li>
-                             <a href="#">Запорожье</a>
-                         </li>
-                         <li>
-                             <a href="#">Одесса</a>
-                         </li>
-                         <li>
-                             <a href="#">Львов</a>
-                         </li>
-                         <li>
-                             <a href="#">Черновцы</a>
-                         </li>
-                         <li>
-                             <a href="#">Суммы</a>
-                         </li>
-                         <li>
-                             <a href="#">Черкассы</a>
-                         </li>
-                         <li>
-                             <a href="#">Кривой рог</a>
-                             <div class="link_city">
-                                 <a href="#">Павлоград</a>
-                                 <a href="#">Энергодар</a>
-                             </div>
-                         </li>
-                         <li>
-                             <a href="#">Николаев</a>
-                         </li>
-                         <li>
-                             <a href="#">Мариуполь</a>
-                         </li>
-                         <li>
-                             <a href="#">Полтава</a>
-                         </li>
-                     </ul>
-                </div>
+
                 <div class="footer_item_office footer_item_social">
                     <div class="footer_item_text_s">Мы в соц. сетях</div>
                     <div class="footer_item_grid">
@@ -667,10 +668,128 @@ basket_total">Итого:
         </div>
     </div>
 
+    <div class="ui page dimmer">
+        <div class="popup_search">
+            <div class="ui icon search input search_header_b">
+                <i class="search icon"></i>
+                <input type="text" placeholder="Поиск по сайту ">
+            </div>
+            <div class="result_container">
+                <div class="result_grid">
+                    <div class="result_items">
+                        <a href="#" class="result_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </a>
+                        <a href="#" class="result_items_title title">
+                            Горизонтальные алюминивые жалюзи Венус белые - 0221
+                        </a>
+                        <div class="result_items_info">
+                            <div class="result_items_info_l">
+                                <p>От</p>
+                                7 580 <span>грн.</span>
+                            </div>
+                            <a href="#" class="result_items_info_r">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <a href="#" class="result_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </a>
+                        <a href="#" class="result_items_title title">
+                            Горизонтальные алюминивые жалюзи Венус белые - 0221
+                        </a>
+                        <div class="result_items_info">
+                            <div class="result_items_info_l">
+                                <p>От</p>
+                                7 580 <span>грн.</span>
+                            </div>
+                            <a href="#" class="result_items_info_r">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <a href="#" class="result_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </a>
+                        <a href="#" class="result_items_title title">
+                            Горизонтальные алюминивые жалюзи Венус белые - 0221
+                        </a>
+                        <div class="result_items_info">
+                            <div class="result_items_info_l">
+                                <p>От</p>
+                                7 580 <span>грн.</span>
+                            </div>
+                            <a href="#" class="result_items_info_r">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <a href="#" class="result_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </a>
+                        <a href="#" class="result_items_title title">
+                            Горизонтальные алюминивые жалюзи Венус белые - 0221
+                        </a>
+                        <div class="result_items_info">
+                            <div class="result_items_info_l">
+                                <p>От</p>
+                                7 580 <span>грн.</span>
+                            </div>
+                            <a href="#" class="result_items_info_r">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <a href="#" class="result_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </a>
+                        <a href="#" class="result_items_title title">
+                            Горизонтальные алюминивые жалюзи Венус белые - 0221
+                        </a>
+                        <div class="result_items_info">
+                            <div class="result_items_info_l">
+                                <p>От</p>
+                                7 580 <span>грн.</span>
+                            </div>
+                            <a href="#" class="result_items_info_r">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <a href="#" class="result_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </a>
+                        <a href="#" class="result_items_title title">
+                            Горизонтальные алюминивые жалюзи Венус белые - 0221
+                        </a>
+                        <div class="result_items_info">
+                            <div class="result_items_info_l">
+                                <p>От</p>
+                                7 580 <span>грн.</span>
+                            </div>
+                            <a href="#" class="result_items_info_r">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="button_all_result button_all">
+                Все результаты поиска (250 товаров)
+            </a>
+        </div>
+    </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <script src="js/app.js"></script>
+
 
 {% endblock %}
