--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -649,34 +649,110 @@
                     </div>
                 </div>
                 <div class="container_map_right">
+                     <select class="ui fluid  dropdown representative_select">
+                         <option value="KH">Харьков</option>
+                         <option value="KV">Киев</option>
+                     </select>
+                     <div class="representative_text">
+                         Название представительситва может в две строки
+                     </div>
+                     <div class="button_services">
+                         Предоставляемые услуги
+                     </div>
+                     <ul class="representative_list_info">
+                         <li>
+                             <div class="representative_icon">
+                                 <img src="../../assets/img/svg/employee.svg" alt="">
+                             </div>
+                             <div class="representative_right">
+                                 <div class="representative_right_text">В этом городе есть монтажная бригада</div>
+                             </div>
+                         </li>
+                         <li>
+                             <div class="representative_icon representative_icon_color">
+                                 <img src="../../assets/img/svg/Adress.svg" alt="" class="svg">
+                             </div>
+                             <div class="representative_right">
+                                 <div class="representative_right_text">г. Харьков, пр-т Московский, 129а</div>
+                                 <div class="click_map">Проложить машрут</div>
+                             </div>
+                         </li>
+                         <li>
+                             <div class="representative_icon representative_icon_color">
+                                 <img src="../../assets/img/svg/Phone.svg" alt="" class="svg">
+                             </div>
+                             <div class="representative_right">
+                                 <a href="tel:+380501328457
+ " class="representative_right_text">(050) 132-84-57
+                                 </a>
+                             </div>
+                         </li>
+                         <li>
+                             <div class="representative_icon representative_icon_color">
+                                 <img src="../../assets/img/svg/Email.svg" alt="" class="svg">
+                             </div>
+                             <div class="representative_right">
+                                 <a href="mailto:arttexoffice@gmail.com
+ " class="representative_right_text">arttexoffice@gmail.com
+                                 </a>
+                             </div>
+                         </li>
+                         <li>
+                             <div class="representative_icon representative_icon_color">
+                                 <img src="../../assets/img/svg/clock.svg" alt="" class="svg">
+                             </div>
+                             <div class="representative_right">
+                                 <div class="clock_map">
+                                     Пн-Пт: <span>09:00 - 17:00</span>
+                                     <br>
+                                     Сб-Вс: <span>Выходной</span>
+                                 </div>
+                             </div>
+                         </li>
+                     </ul>
+                 </div>
+
+              <!--  <div class="container_map_right">
                     <select class="ui fluid  dropdown representative_select">
                         <option value="KH">Харьков</option>
                         <option value="KV">Киев</option>
                     </select>
-                    <div class="representative_text">
-                        Название представительситва может в две строки
+                    <div class="container_manager">
+                        <div class="manager_row">
+                            <div class="manager_img">
+                               {#<div class="manager_status offline">
+                                </div>#}
+                                <div class="manager_status online">
+                                </div>
+                                <img src="../../assets/img/Ellipse69.png" alt="">
+                            </div>
+                            <div class="manager_column">
+                                <div class="manager_column_text_t">Менеджер - консультант</div>
+                                <div class="manager_column_text_b">Анна</div>
+                            </div>
+                        </div>
+                        <div class="manager_social">
+                            <div class="manager_social_text">Вы можете связаться с нами через мессенджер:</div>
+                            <div class="manager_social_link">
+                                <a href="#">
+                                    <img src="../../assets/img/svg/Messenger.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../../assets/img/svg/Viber.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../../assets/img/svg/What’s_app.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../../assets/img/svg/Telegram.svg" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="button_services">
                         Предоставляемые услуги
                     </div>
                     <ul class="representative_list_info">
-                        <li>
-                            <div class="representative_icon">
-                                <img src="../../assets/img/svg/employee.svg" alt="">
-                            </div>
-                            <div class="representative_right">
-                                <div class="representative_right_text">В этом городе есть монтажная бригада</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="representative_icon representative_icon_color">
-                                <img src="../../assets/img/svg/Adress.svg" alt="" class="svg">
-                            </div>
-                            <div class="representative_right">
-                                <div class="representative_right_text">г. Харьков, пр-т Московский, 129а</div>
-                                <div class="click_map">Проложить машрут</div>
-                            </div>
-                        </li>
                         <li>
                             <div class="representative_icon representative_icon_color">
                                 <img src="../../assets/img/svg/Phone.svg" alt="" class="svg">
@@ -710,7 +786,7 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </div>
         </section>
         <section class="info_home">
