--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,17 +1,3 @@
-$white: #fff;
-$black: #07021B;
-$red: #E9484A;
-$grey: #A2A1AF;
-$violet: #4E4A65;
-$pink: #FFD6D6;
-
-$h1: 56px;
-$h2: 48px;
-$h3: 40px;
-$h4: 32px;
-$h5: 24px;
-$h6: 16px;
-$h7: 14px;
 
 @font-face {
   font-family: 'Lato';
@@ -139,7 +125,26 @@ $h7: 14px;
   font-style: italic;
 }
 
+
+
+$white: #fff;
+$black: #07021B;
+$red: #E9484A;
+$grey: #A2A1AF;
+$violet: #4E4A65;
+$pink: #FFD6D6;
+
+$h1: 56px;
+$h2: 48px;
+$h3: 40px;
+$h4: 32px;
+$h5: 24px;
+$h6: 16px;
+$h7: 14px;
+
+
 body {
+
   margin: 0;
   font-size: $h7;
   font-family: 'Lato', sans-serif;
@@ -156,11 +161,13 @@ a {
   transition: .2s all;
 }
 
+
+
 /*Header*/
+.header_fixed,
 header {
   display: grid;
   grid-template-columns: max-content auto max-content max-content;
-  align-items: center;
 }
 
 .basket_button {
@@ -175,20 +182,23 @@ header {
 .ui.bottom.popup.popup_all.buyer_popup {
   margin-left: -17px;
 }
-.help_footer{
+
+.help_footer {
   position: relative;
-  &:hover{
-    .phone_help_popup{
+
+  &:hover {
+    .phone_help_popup {
       opacity: 1;
     }
 
   }
 }
-.phone_help_popup{
+
+.phone_help_popup {
   opacity: 0;
   transition: .5s all;
   position: absolute;
-  background: white ;
+  background: white;
   padding: 62px 32px 32px;
   top: -2px;
   border: 2px solid #07021B;
@@ -196,6 +206,7 @@ header {
   width: calc(100% + 4px);
   left: -2px;
 }
+
 .ui.bottom.popup.popup_all,
 .ui.bottom.popup.phone_popup {
   top: 0 !important;
@@ -384,29 +395,35 @@ header {
   font-size: $h6;
   line-height: $h6;
 }
-.phone_help_popup{
-  p,span{
+
+.phone_help_popup {
+  p, span {
     font-size: 14px;
     padding-left: 30px;
   }
-.footer_item_phone{
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  svg{
-    width: 20px;
-    height: 20px;
+
+  .footer_item_phone {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+
+    path {
+      fill: #4E4A65;
+    }
+
+    .footer_item_text {
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 18px;
+    }
+
+    color: #07021B;
   }
-  path{
-    fill:#4E4A65;
-  }
-  .footer_item_text {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 18px;
-  }
-  color: #07021B;
-}
 }
 
 
@@ -686,6 +703,8 @@ a:hover {
 
 .button_header {
   padding: 28px 48px;
+  display: flex;
+  align-items: center;
   background: $violet;
 
 }
@@ -765,6 +784,7 @@ a:hover {
   background: white;
 
   &.active:after {
+    z-index: 20;
     content: " ";
     position: fixed;
     left: 0;
@@ -1181,12 +1201,15 @@ a:hover {
   margin-top: 24px;
 }
 
-.ui.popup.popup_search {
-
-  &:before {
-    display: none;
+.popup_search {
+  &.active{
+    display: block;
   }
-
+  transform: translate(-117px, -22px);
+  background: white;
+  position: fixed;
+  display: none;
+  z-index: 20;
   border: 1px solid #EBEBED !important;
   box-shadow: none;
   border-radius: 0;
@@ -1197,7 +1220,6 @@ a:hover {
 
   margin: 0;
   padding: 21px 40px;
-  top: 80px !important;
   max-width: 508px;
   width: 100%;
   height: calc(100vh - 72px - 20px);
@@ -1331,11 +1353,13 @@ a:hover {
   grid-template-columns: auto max-content;
   grid-gap: 200px;
 }
-.container_slider{
+
+.container_slider {
   position: relative;
   height: max-content;
 }
-.content_list_product{
+
+.content_list_product {
   max-width: 408px;
   width: 100%;
   background: #FFFFFF;
@@ -1344,9 +1368,11 @@ a:hover {
   left: 50%;
   transform: translate(-50%, 0);
 }
-.home_slider{
+
+.home_slider {
   position: relative;
-  &:before{
+
+  &:before {
     left: -100%;
     position: absolute;
     margin-bottom: 40px;
@@ -1543,44 +1569,145 @@ footer.container_all {
   }
 }
 
-.city_list{
+.city_list {
   column-count: 2;
   column-gap: 80px;
   padding: 40px;
 }
-.link_city{
+
+.link_city {
   margin-top: -16px;
 }
-.link_city a{
+
+.link_city a {
   margin-bottom: 16px;
   display: flex;
-  color: #4E4A65!important;
+  color: #4E4A65 !important;
   font-weight: normal;
   font-size: 16px;
   line-height: 16px;
 }
 
-.ui.custom.popup.city_button_footer_popup {
+.city_button_footer_popup {
+  display: none;
+  opacity: 0;
+  background: white;
+  top: 0;
+  pointer-events: none;
   border-radius: 0;
+  position: absolute;
   border: none;
   box-shadow: none;
-  &:before{
+
+  &:before {
     display: none;
   }
-  li>a{
+
+  li > a {
     margin-bottom: 32px;
     display: flex;
     font-weight: bold;
     font-size: 16px;
     line-height: 16px;
-    color: #07021B!important;
+    color: #07021B !important;
   }
 }
+
+.container_manager {
+  margin-bottom: 32px;
+}
+
+.manager_social_text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  margin-bottom: 20px;
+}
+
+.manager_social_link {
+  display: grid;
+
+  svg {
+    width: 100%;
+  }
+
+  grid-template-columns: repeat(4, 24px);
+  grid-gap: 20px;
+}
+
+.manager_img {
+  width: 56px;
+  height: 56px;
+  margin-right: 8px;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+}
+
+.manager_column_text_t {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 16px;
+  margin-bottom: 4px;
+  color: #4E4A65;
+}
+
+.manager_column_text_b {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+}
+
+.manager_row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.manager_status {
+  &.online {
+    background: #6FCF97;
+  }
+
+  &.offline {
+    background: $red;
+  }
+
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  border-radius: 100%;
+}
+
 .city_button_footer {
-  &.active{
+  position: relative;
+
+  &:hover {
+    .city_button_footer_popup {
+      box-suppress: show;
+      opacity: 1;
+      transition: opacity .5s ease;
+      pointer-events: all;
+      display: block !important;
+      top: 50%;
+      right: -100%;
+      transform: translate(21%, -30%);
+      -webkit-animation: fadeInFromNone 0.5s ease-out;
+      -moz-animation: fadeInFromNone 0.5s ease-out;
+      -o-animation: fadeInFromNone 0.5s ease-out;
+      animation: fadeInFromNone 0.5s ease-out;
+    }
+
     background: white;
     color: #07021B;
   }
+
   transition: .5s all;
   font-weight: bold;
   cursor: pointer;
@@ -1792,28 +1919,32 @@ footer.container_all {
 }
 
 
-
-.product_slider .product_items_container.active{
-  p{
+.product_slider .product_items_container.active {
+  p {
     -webkit-animation: fade-in-right 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: fade-in-right 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   }
-  .product_items_price{
+
+  .product_items_price {
     -webkit-animation: fade-in-right 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: fade-in-right 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   }
-  .product_items_title{
+
+  .product_items_title {
     -webkit-animation: fade-in-right 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: fade-in-right 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   }
 }
+
 .product_items_container {
   overflow: hidden;
   display: none;
   padding: 40px 40px 64px;
-  &.active{
+
+  &.active {
     display: block;
   }
+
   p {
     font-weight: normal;
     font-size: 16px;
@@ -1837,7 +1968,7 @@ footer.container_all {
   grid-gap: 88px;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
 
-  >div:nth-child(1){
+  > div:nth-child(1) {
     margin-top: 184px;
     margin-bottom: 64px;
 
@@ -1850,7 +1981,7 @@ footer.container_all {
     }
   }
 
-  >div:nth-child(2) {
+  > div:nth-child(2) {
     .product_items_img {
       img {
         height: 698px;
@@ -1859,7 +1990,7 @@ footer.container_all {
     }
   }
 
-  >div:nth-child(3) {
+  > div:nth-child(3) {
     .product_items_img {
       img {
         max-height: 450px;
@@ -2077,8 +2208,14 @@ footer.container_all {
 
 .services_popup.active {
   right: 0;
+  border: 1px solid #EBEBED;
 }
-
+.header_menu_catalog{
+  position: absolute;
+  left: 0;
+  bottom: 0%;
+  transform: translate(0,100%);
+}
 .services_popup {
   transition: .5s all;
   padding: 64px;
@@ -2357,6 +2494,132 @@ footer.container_all {
   padding-top: 200px;
 }
 
+
+/*Header Fixed*/
+.btn_block {
+  margin-right: 20px;
+}
+
+.catalog_header_text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+}
+
+.catalog_header {
+  border-right: 1px solid #EBEBED;
+  cursor: pointer;
+  background: white;
+  display: flex;
+  align-items: center;
+  padding: 28px 82px;
+}
+
+.header_fixed {
+  border: 1px solid #EBEBED;
+ &.active{
+   position: fixed;
+   top: 0;
+   display: grid;
+   z-index: 99;
+   width: 100%;
+ }
+  background: white;
+  display: none;
+  .ui.search_header_b.popup_click_search{
+    width: 350px;
+    >input{
+      background: none!important;
+    }
+  }
+  .header_info {
+    background: white ;
+    grid-template-columns: repeat(4, max-content);
+    padding: 19px 40px 19px 72px;
+  }
+}
+.menu_list_catalog{
+  &:before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    height: 100%;
+    left: 0;
+    transform: translate(calc(100% + 30px),0);
+    max-width: 465px;
+    z-index: -1;
+    width: 100%;
+    background: #EBEBED;
+  }
+  display: grid;
+  grid-template-columns: minmax(0, calc(1034px + 361px)) max-content;
+  ul{
+    &.menu_catalog_grid{
+      padding-right: 52px;
+      box-sizing: content-box;
+
+      li.active{
+        background: #EBEBED;
+      }
+    }
+    position: relative;
+    max-width: 361px;
+    width: 100%;
+    li{
+      padding: 20px 40px;
+      cursor: pointer;
+
+      a{
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 16px;
+      }
+    }
+    ul{
+      opacity: 0;
+      pointer-events: none;
+      &.active{
+        opacity: 1;
+        pointer-events: all;
+      }
+      &.menu_catalog_last{
+        display: grid;
+        grid-gap: 32px;
+        li{
+          padding: 0px 52px;
+        }
+        li a{
+          font-weight: normal;
+          font-size: 16px;
+          color: #4E4A65;
+          line-height: 16px;
+        }
+      }
+      &.menu_hover_catalog{
+        li.active{
+          background: #FFFFFF;
+        }
+        height: 100%;
+        padding: 0 52px;
+        box-sizing: content-box;
+      }
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(100%,0);
+    }
+  }
+
+}
+.header_menu_catalog{
+  width: 100% ;
+  height: 885px;
+  background: #FFFFFF;
+  padding: 140px 82px;
+  border: 1px solid #EBEBED;
+  box-sizing: border-box;
+}
 /*Animation*/
 @-webkit-keyframes fade-in-right {
   0% {
@@ -2370,6 +2633,7 @@ footer.container_all {
     opacity: 1;
   }
 }
+
 @keyframes fade-in-right {
   0% {
     -webkit-transform: translateX(150px);
@@ -2383,3 +2647,70 @@ footer.container_all {
   }
 }
 
+@-webkit-keyframes fadeInFromNone {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+
+  1% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeInFromNone {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+
+  1% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeInFromNone {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+
+  1% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInFromNone {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+
+  1% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
