--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -8,15 +8,15 @@
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="http://kenwheeler.github.io/slick/slick/slick-theme.css">
 
     <script
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            src="//code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
 </head>
@@ -319,122 +319,128 @@
         <i class="search icon"></i>
         <input type="text" placeholder="Поиск по сайту ">
     </div>
-    <div class="ui custom popup popup_search">
-        <div class="ui icon search input search_header_b">
+</div>
+<div class="header_fixed">
+    <div class="catalog_header">
+        <div class="btn_block">
+            <img src="../../assets/img/svg/btn.svg" alt="">
+        </div>
+        <div class="catalog_header_text"> Каталог товаров</div>
+
+    </div>
+    <div class="header_info">
+        <div class="buyer_popup_header icon_all">
+            <div class="phone_popup_text">
+                Покупателям
+            </div>
+            <i class="dropdown icon"></i>
+        </div>
+        <div class="ui custom popup popup_all buyer_popup">
+            <ul class="buyer_popup_link">
+                <li>
+                    <a href="#">О компании</a>
+                </li>
+                <li>
+                    <a href="#">Доставка и оплата</a>
+                </li>
+                <li>
+                    <a href="#">Гарантия и Возврат</a>
+                </li>
+                <li>
+                    <a href="#">Наши услуги</a>
+                </li>
+                <li>
+                    <a href="#">Просто качественно</a>
+                </li>
+                <li>
+                    <a href="#">Полезные статьи</a>
+                </li>
+                <li>
+                    <a href="#">Вопрос - ответ</a>
+                </li>
+                <li>
+                    <a href="#">Дизайнерам</a>
+                </li>
+                <li>
+                    <a href="#">Портфолио работ</a>
+                </li>
+                <li>
+                    <a href="#">Контакты </a>
+                </li>
+            </ul>
+        </div>
+        <div class="button_all text_bold_s">
+            Онлайн конструктор
+        </div>
+        <div class="ui icon search input search_header_b popup_click_search">
             <i class="search icon"></i>
             <input type="text" placeholder="Поиск по сайту ">
         </div>
-        <div class="result_container">
-            <div class="result_grid">
-                <div class="result_items">
-                    <a href="#" class="result_items_img">
-                        <img src="../../assets/img/basket_img.png" alt="">
-                    </a>
-                    <a href="#" class="result_items_title title">
-                        Горизонтальные алюминивые жалюзи Венус белые - 0221
-                    </a>
-                    <div class="result_items_info">
-                        <div class="result_items_info_l">
-                            <p>От</p>
-                            7 580 <span>грн.</span>
-                        </div>
-                        <a href="#" class="result_items_info_r">
-                            Подробнее
-                        </a>
-                    </div>
+        <div class="icon_container">
+            <div class="icon_img login_icon">
+                <img src="../../assets/img/svg/Log_in.svg" alt="" class="svg">
+            </div>
+            <div class="icon_img eye_icon">
+                <img src="../../assets/img/svg/eye.svg" alt="" class="svg">
+                <div class="label_icon">
+                    33
                 </div>
-                <div class="result_items">
-                    <a href="#" class="result_items_img">
-                        <img src="../../assets/img/basket_img.png" alt="">
-                    </a>
-                    <a href="#" class="result_items_title title">
-                        Горизонтальные алюминивые жалюзи Венус белые - 0221
-                    </a>
-                    <div class="result_items_info">
-                        <div class="result_items_info_l">
-                            <p>От</p>
-                            7 580 <span>грн.</span>
-                        </div>
-                        <a href="#" class="result_items_info_r">
-                            Подробнее
-                        </a>
-                    </div>
-                </div>
-                <div class="result_items">
-                    <a href="#" class="result_items_img">
-                        <img src="../../assets/img/basket_img.png" alt="">
-                    </a>
-                    <a href="#" class="result_items_title title">
-                        Горизонтальные алюминивые жалюзи Венус белые - 0221
-                    </a>
-                    <div class="result_items_info">
-                        <div class="result_items_info_l">
-                            <p>От</p>
-                            7 580 <span>грн.</span>
-                        </div>
-                        <a href="#" class="result_items_info_r">
-                            Подробнее
-                        </a>
-                    </div>
-                </div>
-                <div class="result_items">
-                    <a href="#" class="result_items_img">
-                        <img src="../../assets/img/basket_img.png" alt="">
-                    </a>
-                    <a href="#" class="result_items_title title">
-                        Горизонтальные алюминивые жалюзи Венус белые - 0221
-                    </a>
-                    <div class="result_items_info">
-                        <div class="result_items_info_l">
-                            <p>От</p>
-                            7 580 <span>грн.</span>
-                        </div>
-                        <a href="#" class="result_items_info_r">
-                            Подробнее
-                        </a>
-                    </div>
-                </div>
-                <div class="result_items">
-                    <a href="#" class="result_items_img">
-                        <img src="../../assets/img/basket_img.png" alt="">
-                    </a>
-                    <a href="#" class="result_items_title title">
-                        Горизонтальные алюминивые жалюзи Венус белые - 0221
-                    </a>
-                    <div class="result_items_info">
-                        <div class="result_items_info_l">
-                            <p>От</p>
-                            7 580 <span>грн.</span>
-                        </div>
-                        <a href="#" class="result_items_info_r">
-                            Подробнее
-                        </a>
-                    </div>
-                </div>
-                <div class="result_items">
-                    <a href="#" class="result_items_img">
-                        <img src="../../assets/img/basket_img.png" alt="">
-                    </a>
-                    <a href="#" class="result_items_title title">
-                        Горизонтальные алюминивые жалюзи Венус белые - 0221
-                    </a>
-                    <div class="result_items_info">
-                        <div class="result_items_info_l">
-                            <p>От</p>
-                            7 580 <span>грн.</span>
-                        </div>
-                        <a href="#" class="result_items_info_r">
-                            Подробнее
-                        </a>
-                    </div>
+            </div>
+            <div class="icon_img libra_icon">
+                <img src="../../assets/img/svg/Libra.svg" alt="" class="svg">
+                <div class="label_icon gray">
+                    0
                 </div>
             </div>
         </div>
-        <a href="#" class="button_all_result button_all">
-            Все результаты поиска (250 товаров)
-        </a>
+    </div>
+    <div class="button_all button_header">Вызвать замерщика</div>
+    <div class="basket_button">
+        <div class="icon_img basket_icon">
+            <img src="../../assets/img/svg/basket.svg" alt="" class="svg ">
+            <div class="label_icon">
+                5
+            </div>
+        </div>
+    </div>
+    <div class="header_menu_catalog">
+        <div class="menu_list_catalog">
+            <ul class="menu_catalog_grid">
+                <li>
+                    <a href="">Жалюзи</a>
+                    <ul class="menu_hover_catalog">
+                        <li class="active"><a href="#">Горизонтальные жалюзи</a>
+                            <ul class="menu_catalog_last">
+                                <li>
+                                    <a href="#">Пластиковые 89 мм.</a>
+                                </li>
+                                <li>
+                                    <a href="#">Тканевые 127/89 мм.</a>
+                                </li>
+                                <li>
+                                    <a href="#">Мультифактурные 89 мм.</a>
+                                </li>
+                                <li>
+                                    <a href="#">Нитяные 89 мм. </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Вертикальные жалюзи</a></li>
+                        <li><a href="#">Жалюзи по назначению</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Тканевые ролеты</a></li>
+                <li><a href="#">Римские шторы</a></li>
+                <li><a href="#">Рулонные шторы</a></li>
+                <li><a href="#">Жалюзи День-Ночь</a></li>
+            </ul>
+            <a href="#" class="menu_list_catalog_img">
+                <img src="../../assets/img/Rectangle148.png" alt="">
+            </a>
+        </div>
     </div>
 </div>
+
 {% block page %}{% endblock %}
 {% block footer %}{% endblock %}
 </body>
