add 1366 start 768 adaptive

--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -7,7 +7,7 @@
     <title>{{ head_title }}</title>
 
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
@@ -324,6 +324,7 @@
     <div class="catalog_header">
         <div class="btn_block">
             <img src="../../assets/img/svg/btn.svg" alt="">
+            <img src="../../assets/img/svg/close.svg" class="svg close_icon" alt="">
         </div>
         <div class="catalog_header_text"> Каталог товаров</div>
 
@@ -407,9 +408,9 @@
         <div class="menu_list_catalog">
             <ul class="menu_catalog_grid">
                 <li>
-                    <a href="">Жалюзи</a>
+                    <a href="#">Жалюзи</a>
                     <ul class="menu_hover_catalog">
-                        <li class="active"><a href="#">Горизонтальные жалюзи</a>
+                        <li ><a href="#">Горизонтальные жалюзи</a>
                             <ul class="menu_catalog_last">
                                 <li>
                                     <a href="#">Пластиковые 89 мм.</a>
@@ -429,7 +430,28 @@
                         <li><a href="#">Жалюзи по назначению</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Тканевые ролеты</a></li>
+                <li><a href="#">Тканевые ролеты</a>
+                    <ul class="menu_hover_catalog">
+                        <li ><a href="#">Горизонтальные жалюзи2</a>
+                            <ul class="menu_catalog_last">
+                                <li>
+                                    <a href="#">Пластиковые 89 мм.</a>
+                                </li>
+                                <li>
+                                    <a href="#">Тканевые 127/89 мм.</a>
+                                </li>
+                                <li>
+                                    <a href="#">Мультифактурные 89 мм.</a>
+                                </li>
+                                <li>
+                                    <a href="#">Нитяные 89 мм. </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Вертикальные жалюзи</a></li>
+                        <li><a href="#">Жалюзи по назначению</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Римские шторы</a></li>
                 <li><a href="#">Рулонные шторы</a></li>
                 <li><a href="#">Жалюзи День-Ночь</a></li>
